@@ -7,6 +7,7 @@ update-manager (1:0.98.2) jaunty; urgency=low
     - create /var/lib/pycentral/pkgremove before the upgrade to
       help pycentral transition to the new python policy (thanks
       to doko)
+  * ensure pidgin-libnotify is ugpraded (LP: #332328)
 
   [ Brian Murray ]
   * DistUpgrade/multiple files:
